# DJ_ToDo

./: .bandit  .flake8  .gitignore  README.md  db.sqlite3  pyproject.toml
.github/workflows/: ci-cd.yml
base/: tests.py  urls.py  views.py
base/migrations/: 0001_initial.py  0002_auto_20210322_2234.py
base/templates/base/: main.html  task_list.html
base/views_files/: login_views.py  registration_views.py  task_views.py
todo_list/: settings.py
