[tool.poetry]
name = "dj-todo"
version = "0.1.0"
description = "A Django Todo Application"
authors = ["Your Name <your.email@example.com>"]
packages = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.1.5"
gunicorn = "^21.2.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
bandit = "^1.8.2"
coverage = "^7.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
